<resources>
    <string name="app_name">Speedrun Time Environment</string>
    <string name="games">Games</string>
    <string name="streams">Streams</string>
    <string name="streampage">Stream</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="options">Options</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="backup">Backup</string>
    <string name="faq">FAQ</string>
    <string name="appinfo">App-Info</string>
    <string name="logosmall">Logo Small</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="backarrow">BackArrow</string>
    <string name="title_activity_faq">faq</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="overview">Overview</string>
    <string name="opendrawer">opendrawer</string>
    <string name="closedrawer">closedrawer</string>
    <string name="rank">Rank</string>
    <string name="player">Player</string>
    <string name="time">Time</string>
    <string name="platform">Platform</string>
    <string name="all">All</string>
    <string name="deletefav">Remove all favorites</string>
    <string name="deletefavq">Do you really want to remove all favorites?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Yes</string>
    <string name="currentstreams">Current Streams</string>
    <string name="faq1">What is a Speedrun?</string>
    <string name="faq1a">Playing trough a game as fast as possible is called a Speedrun. Time will be stoppen from start to the end to compete with others.</string>
    <string name="faq2">What is a Run?</string>
    <string name="faq2a">To play the game with a certain objective while time is been stoped is called a Run.</string>
    <string name="faq3">What is Any% or 100%?</string>
    <string name="faq3a">There are different objectives in Runs to compete with other like  Any% where you want to reach the end as fast as possible or 100% where you need everything you can collect or achieve as fast as possible.</string>
    <string name="faq4">Where do you get your data from?</string>
    <string name="faq4a">We get our data from the Speedrun.com API.</string>
    <string name="grpname">Group: SpeedrunTime_Error</string>
    <string name="member">Nils Jakubeit, Jannick Faber, Leo Rüther, Brian Werthschulte</string>
</resources>
