<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.Faq">

    <ScrollView
        android:id="@+id/scrollViewfaq"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/f1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:text="@string/faq1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/f1a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:text="@string/faq2a" />

            <TextView
                android:id="@+id/f2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:text="@string/faq2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/f2a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:text="@string/faq3a" />

            <TextView
                android:id="@+id/f3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:text="@string/faq3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/f3a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:text="@string/faq1a" />

            <TextView
                android:id="@+id/f4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:text="@string/faq4"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/f4a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:text="@string/faq4a" />

            <ImageView
                android:id="@+id/logo_small_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logosmall"
                app:srcCompat="@mipmap/ic_launcher_foreground" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>