<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:minHeight="50dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll_options"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <Button
                    android:id="@+id/btn_favorites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:minHeight="80dp"
                    android:onClick="sendMessge"
                    android:text="@string/favorites"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:minHeight="80dp"
                    android:onClick="sendMessge"
                    android:text="@string/notifications"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_favorites" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_backup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:minHeight="80dp"
                    android:text="@string/backup"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_notifications" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:minHeight="80dp"
                    android:text="@string/faq"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_backup" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_appinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:minHeight="80dp"
                    android:text="@string/appinfo"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_faq" />
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/logo_small_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/logosmall"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_appinfo"
                    app:srcCompat="@mipmap/ic_launcher_foreground" />
            </TableRow>
        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>