<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:minHeight="50dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll_overview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:id="@+id/game_name"
                    android:textSize="32sp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8sp"
                    android:text="GameName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/game_img"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/logosmall"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/game_name"
                    app:srcCompat="@mipmap/ic_launcher_foreground" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/game_year"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4sp"
                    android:text="GameYear"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/game_img" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/game_devices"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8sp"
                    android:text="GameDevices"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/game_year" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_leaderboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0sp"
                    android:layout_weight="2"
                    android:minHeight="80sp"
                    android:text="@string/leaderboard"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/game_devices" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_guides"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0sp"
                    android:layout_weight="2"
                    android:minHeight="80sp"
                    android:text="@string/guides"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_leaderboard" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_streams"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0sp"
                    android:layout_weight="2"
                    android:minHeight="80sp"
                    android:text="@string/streams"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_guides" />
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/logo_small_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/logosmall"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_appinfo"
                    app:srcCompat="@mipmap/ic_launcher_foreground" />
            </TableRow>
        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>